v0.10: Finished question API
